# 22202-chumakin-oop-cpp

task-0/: CMakeLists.txt  FileReader.cpp  FileReader.h  Parser.cpp  Parser.h  Statistic.cpp  Statistic.h  Writer.cpp  Writer.h  main.cpp
task-0/Google_tests/: CMakeLists.txt  FileReader_test.cpp  Parser_test.cpp  Statistic_test.cpp  Writer_test.cpp
task-1/: BitArray.cpp  BitArray.h  CMakeLists.txt  ExceptionThrow.h
task-1/Google_tests/: BitArrayTest.cpp  CMakeLists.txt
task-1/Google_tests/lib/googlemock/include/gmock/: gmock-matchers.h
task-1/Google_tests/lib/googlemock/src/: gmock-spec-builders.cc
task-1/Google_tests/lib/googlemock/test/: gmock-spec-builders_test.cc
task-1/Google_tests/lib/googletest/cmake/: internal_utils.cmake
task-1/Google_tests/lib/googletest/include/gtest/: gtest.h
task-1/Google_tests/lib/googletest/include/gtest/internal/: gtest-port.h
task-1/Google_tests/lib/googletest/src/: gtest-printers.cc  gtest.cc
task-1/Google_tests/lib/googletest/test/: googletest-param-test-test.cc  gtest_unittest.cc
